Fixed the spacing between blocks to 30px and upped the body line-height to 1.5.
Addresses #20

--- a/assets/css/src/_defaults.css
+++ b/assets/css/src/_defaults.css
@@ -49,15 +49,15 @@ blockquote {
 }
 
 .alignwide {
-	margin-left: calc(25% - 25vw);
-	margin-right: calc(25% - 25vw);
+	margin-left: calc(25% - 25vw) !important;
+	margin-right: calc(25% - 25vw) !important;
 	max-width: 1000%;
 	width: auto;
 }
 
 .alignfull {
-	margin-left: calc(50% - 50vw);
-	margin-right: calc(50% - 50vw);
+	margin-left: calc(50% - 50vw) !important;
+	margin-right: calc(50% - 50vw) !important;
 	max-width: 100vw;
 	width: 100vw;
 }
@@ -67,14 +67,14 @@ blockquote {
 	.content-sidebar-layout {
 
 		& .alignwide {
-			margin-left: calc(100% - 53vw);
-			margin-right: 0;
+			margin-left: calc(100% - 53vw) !important;
+			margin-right: 0 !important;
 			max-width: 1000%;
 		}
 
 		& .alignfull {
-			margin-left: calc(83% - 53vw);
-			margin-right: 0;
+			margin-left: calc(83% - 53vw) !important;
+			margin-right: 0 !important;
 			max-width: 1000%;
 			width: auto;
 		}
